<resources>
    <string name="app_name">AlSafeer</string>
    <string name="field_req">Field required</string>
    <string name="login">Login</string>
    <string name="code">Code</string>
    <string name="user_phone">Phone</string>
    <string name="are_you_have_account">Are You Have Account ?</string>
    <string name="upload_profile_photo">Upload Profile Photo</string>
    <string name="email">Email</string>
    <string name="accept">Accept</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="confirm">Confirm</string>
    <string name="share_app">Share App</string>
    <string name="rate_app">Rate App</string>
    <string name="logout">Logout</string>
    <string name="about_app">About App</string>
    <string name="notifications">Notifications</string>
    <string name="wait">Wait</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="more">More</string>
    <string name="field_required">Field Required</string>
    <string name="inv_email">Invalid Email</string>
    <string name="cannot_signup">Can Not Signup Without Accept Terms And Conditions</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="privacy">Privacy policy</string>
    <string name="upload_image">Upload image</string>
    <string name="select_image_to_upload">Select Image to Upload</string>
    <string name="cancel">Cancel</string>
    <string name="sign_up">Sign Up</string>
    <string name="failed">Failed</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="ch_skill">Choose Skills</string>
    <string name="type_a_message">Type a message...</string>
    <string name="please_sign_in_or_sign_up">Please sign In or Sign Up</string>
    <string name="ok">Ok</string>
    <string name="skip">Skip</string>
    <string name="just_now">Just Now</string>
    <string name="a_minute_ago">a min ago</string>
    <string name="min">min</string>
    <string name="an_hour_ago">an hour ago</string>
    <string name="hs">h</string>
    <string name="yesterday">yesterday</string>
    <string name="video">Sent video message</string>
    <string name="voice">Sent voice message</string>
    <string name="image">Sent image</string>
    <string name="something">Check internet connection</string>
    <string name="invite">Invite</string>
    <string name="back">Back</string>
    <string name="refuse">Refuse</string>
    <string name="no_conversation">No conversation</string>
    <string name="password">Password</string>
    <string name="password_short">Password is too short</string>
    <string name="deals">Deals</string>
    <string name="bills">Bills</string>
    <string name="joint_deals">Joint Deals</string>
    <string name="no_data_to_show">No data to show</string>
    <string name="egp">EGP</string>
    <string name="change_language">Change Language</string>
    <string name="details">Details</string>
    <string name="date_created">Date created</string>
    <string name="deal_cost">Deal Cost</string>
    <string name="amount">Amount</string>
    <string name="work_classification">Client comments</string>
    <string name="products">Products</string>
    <string name="deal_balance">Deal balance</string>
    <string name="percentage">Percentage</string>
    <string name="bill_number">Bill number</string>
    <string name="price">Price</string>
    <string name="pay">Pay</string>
    <string name="done">Done</string>
    <string name="user_not_found">user not found</string>
    <string name="charge">My Wallet</string>
    <string name="current">Current</string>
    <string name="previous">Previous</string>
    <string name="upload_payment_receipt_photo">Upload payment receipt photo</string>
    <string name="notes">Notes</string>
    <string name="send">Send</string>
    <string name="ch_image">Choose image</string>
    <string name="suc">Success!</string>
    <string name="no_notifications_to_show">No notifications to show</string>
    <string name="name">Name</string>
    <string name="update">Update Profile</string>
    <string name="next">Next</string>
</resources>