<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="lang"
            type="String" />
        <variable
            name="model"
            type="com.alsafeer.models.DealDataModel.Data" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

                <LinearLayout
                    android:id="@+id/llBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"

                    >

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:clickable="false"
                        android:longClickable="false"
                        android:padding="3dp"
                        android:rotation='@{lang.equals("ar")?180:0}'
                        android:src="@drawable/ic_left_arrow" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:clickable="false"
                        android:longClickable="false"
                        android:text="@string/back"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:background="@drawable/top_rounded"
            android:gravity="center_vertical"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1.4"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:text="@string/bill_number"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:text="@string/price"
                />


            <TextView
                android:layout_width="0dp"
                android:layout_weight=".6"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:text="@string/pay"
                />


        </LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            >
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/tvNoData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="50dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/no_data_to_show"
                android:visibility="gone"
                />
            <ProgressBar
                android:id="@+id/progBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="50dp"
                />
        </FrameLayout>
    </LinearLayout>

</layout>
