<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <variable
            name="lang"
            type="String" />
        <variable
            name="model"
            type="com.alsafeer.models.UpdateProfileModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white">

                    <LinearLayout
                        android:id="@+id/llBack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"

                        >

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:clickable="false"
                            android:longClickable="false"
                            android:padding="3dp"
                            android:rotation='@{lang.equals("ar")?180:0}'
                            android:src="@drawable/ic_left_arrow" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:clickable="false"
                            android:longClickable="false"
                            android:text="@string/back"
                            android:textColor="@color/black"
                            android:textSize="15sp" />
                    </LinearLayout>
                </androidx.appcompat.widget.Toolbar>
            </com.google.android.material.appbar.AppBarLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="240dp">
                <ImageView
                    android:id="@+id/imageTop"
                    android:layout_width="match_parent"
                    android:layout_height="170dp"
                    android:src="@drawable/profile_top"
                    android:scaleType="centerCrop"
                    app:layout_constraintTop_toTopOf="parent"
                    />
                <FrameLayout
                    android:id="@+id/flImage"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imageTop"
                    app:layout_constraintBottom_toBottomOf="@id/imageTop"


                    >
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:civ_circle_background_color="@color/white"
                        app:civ_border_width="1dp"
                        app:civ_border_color="@color/white"
                        android:clickable="false"
                        android:longClickable="false"
                        android:src="@drawable/ic_avatar"
                        />
                    <ImageView
                        android:id="@+id/icon"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/ic_plus"
                        android:clickable="false"
                        android:longClickable="false"
                        android:layout_gravity="bottom"
                        app:tint="@color/colorPrimary"
                        />


                </FrameLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".activities_fragments.activity_signup.SignUpActivity"
                android:fitsSystemWindows="true"
                android:fillViewport="true"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <EditText
                        android:id="@+id/edtName"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:background="@drawable/small_rounded_gray_stroke"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginTop="50dp"
                        android:singleLine="true"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:hint="@string/name"
                        android:textColorHint="@color/gray6"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        android:text="@={model.name}"
                        error="@{model.error_name}"

                        />



                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:background="@drawable/small_rounded_gray_stroke"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginTop="20dp"
                        android:singleLine="true"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:hint="@string/email"
                        android:textColorHint="@color/gray6"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        android:inputType="textEmailAddress"
                        android:text="@={model.email}"
                        error="@{model.error_email}"
                        />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:background="@drawable/small_rounded_gray_stroke"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginTop="20dp"
                        android:singleLine="true"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:hint="@string/user_phone"
                        android:textColorHint="@color/gray6"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        android:inputType="phone"
                        android:text="@={model.phone}"
                        error="@{model.error_phone}"

                        />




                    <Button
                        android:id="@+id/btnUpdate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginTop="40dp"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/small_rounded_primary"
                        android:textColor="@color/white"
                        android:textSize="17sp"
                        android:text="@string/update"
                        />


                </LinearLayout>

            </ScrollView>

        </LinearLayout>

        <net.cachapa.expandablelayout.ExpandableLayout
            android:id="@+id/expandLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/trans_black"
            android:padding="16dp"
            app:el_duration="800"
            app:el_expanded="false"
            app:el_parallax=".5"
            android:layout_gravity="bottom"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/flGallery"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/white"
                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:clickable="false"
                        android:longClickable="false"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:padding="12dp"
                            android:src="@drawable/ic_gallery"
                            app:tint="@color/color1" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/gallery"
                            android:textColor="@color/color1"
                            android:textSize="16sp" />
                    </LinearLayout>
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/flCamera"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/white"

                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:clickable="false"
                        android:longClickable="false"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:padding="12dp"
                            android:src="@drawable/ic_camera"
                            app:tint="@color/colorPrimary" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/camera"
                            android:textColor="@color/colorPrimary"
                            android:textSize="16sp" />
                    </LinearLayout>

                </FrameLayout>

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="25dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    />
            </LinearLayout>


        </net.cachapa.expandablelayout.ExpandableLayout>

    </FrameLayout>
</layout>
