<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="lang"
            type="String" />
        <variable
            name="model"
            type="com.alsafeer.models.ReceiptDataModel.ReceiptModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

                <LinearLayout
                    android:id="@+id/llBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"

                    >

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:clickable="false"
                        android:longClickable="false"
                        android:padding="3dp"
                        android:rotation='@{lang.equals("ar")?180:0}'
                        android:src="@drawable/ic_left_arrow" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:clickable="false"
                        android:longClickable="false"
                        android:text="@string/back"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:text="@{model.sale.name}"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                >
                <View
                    android:layout_width="50dp"
                    android:layout_height="1px"
                    android:background="@color/colorPrimary"
                    />
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@color/colorPrimary"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    />
                <View
                    android:layout_width="50dp"
                    android:layout_height="1px"
                    android:background="@color/colorPrimary"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="5dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:text="@string/bill_number"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:text='@{"#"+model.id}'
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"

                    />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:text="@string/upload_payment_receipt_photo"
                android:layout_marginTop="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"

                />

            <FrameLayout
                android:id="@+id/flImage"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/small_rounded_gray_stroke"
                >
                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:riv_corner_radius="5dp"
                    app:riv_border_width="0dp"
                    app:riv_mutate_background="true"
                    android:clickable="false"
                    android:longClickable="false"
                    android:scaleType="centerCrop"
                    />
                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_upload"
                    android:clickable="false"
                    android:longClickable="false"
                    />
            </FrameLayout>

            <EditText
                android:id="@+id/edtNote"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="10dp"
                android:hint="@string/notes"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textColorHint="@color/gray4"
                android:gravity="top"
                android:padding="8dp"
                android:background="@drawable/small_rounded_gray_stroke"
                />
        </LinearLayout>

        <Button
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_btn_color1"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/send"/>
    </LinearLayout>

</layout>
