<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="3dp"
        app:cardCornerRadius="8dp"
        app:contentPadding="8dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="3dp"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_deal"
                    app:tint="@color/colorPrimary"
                    />
                <Space
                    android:layout_width="8dp"
                    android:layout_height="0dp"
                    android:layout_gravity="center_vertical"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"

                    />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray8"
                    android:textSize="14sp"


                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/bill_number"

                    />

                <Space
                    android:layout_width="8dp"
                    android:layout_height="0dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_gravity="center_vertical"

                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/price"

                    />

                <Space
                    android:layout_width="8dp"
                    android:layout_height="0dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_gravity="center_vertical"
                    android:textStyle="bold"


                    />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:background="@drawable/rounded_btn_color1"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:text="@string/pay"
                    />

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>